# translate_code

./: .gitignore  .translate-code.env.example  LICENSE  README.md  pyproject.toml  requirements.txt  test.R  test.en.py  test.ipynb  test.py
translate_code/: __init__.py  __main__.py  cli.py  comments_hash.py  comments_python.py  comments_r.py  env_loader.py  file_types.py  ipynb_io.py  python_literals.py  translate_client.py
translate_code/cache/: .gitignore
