[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "translate-code"
version = "0.1.0"
description = "Translate Chinese comments in notebooks and source files to English via an AI API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "translate-code contributors" }]
keywords = ["translation", "jupyter", "notebook", "cli", "i18n", "comments", "python", "r"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "nbformat>=5.9",
    "httpx>=0.25",
]

[project.scripts]
translate-code = "translate_code.cli:main"

[project.urls]
Documentation = "https://github.com/YOUR_GITHUB_USER/YOUR_REPO#readme"
Issues = "https://github.com/YOUR_GITHUB_USER/YOUR_REPO/issues"
Repository = "https://github.com/YOUR_GITHUB_USER/YOUR_REPO"

[tool.setuptools.packages.find]
where = ["."]
include = ["translate_code*"]
